[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Cursor/Cursor.gd" type="Script" id=1]
[ext_resource path="res://scenes/TestScenes/CursorTest/selected_tile.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Cursor" type="Node2D"]
script = ExtResource( 1 )

[node name="TileContainer" type="Node2D" parent="."]
z_index = 2

[node name="WalkTileSprite" type="Sprite" parent="TileContainer"]
texture = ExtResource( 2 )
offset = Vector2( 0, 13 )

[node name="MouseContainer" type="Node2D" parent="."]

[node name="AllyArea" type="Area2D" parent="MouseContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseContainer/AllyArea"]
shape = SubResource( 1 )
[connection signal="area_entered" from="MouseContainer/AllyArea" to="." method="_on_AllyArea_area_entered"]
[connection signal="area_exited" from="MouseContainer/AllyArea" to="." method="_on_AllyArea_area_exited"]
